bk_ida/gobmkida/c2/eyevalue_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/eyevalue_to_string/src/engine/optics.c:2350:14: error: use of undeclared identifier 'eyevalue_to_string_result'; did you mean 'eyevalue_to_string'?
gg_snprintf( eyevalue_to_string_result, 0x1DuLL, "[%d, %d, %d, %d]", a, b, e->c, v6); 
             ^~~~~~~~~~~~~~~~~~~~~~~~~
             eyevalue_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/eyevalue_to_string/src/engine/optics.c:2336:8: note: 'eyevalue_to_string' declared here
char * eyevalue_to_string( struct eyevalue *e) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/eyevalue_to_string/src/engine/optics.c:2355:14: error: use of undeclared identifier 'eyevalue_to_string_result'; did you mean 'eyevalue_to_string'?
gg_snprintf( eyevalue_to_string_result, 0x1DuLL, "%d%d%d%d", a, b, c, v6); 
             ^~~~~~~~~~~~~~~~~~~~~~~~~
             eyevalue_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/eyevalue_to_string/src/engine/optics.c:2336:8: note: 'eyevalue_to_string' declared here
char * eyevalue_to_string( struct eyevalue *e) 
       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/eyevalue_to_string/src/engine/optics.c:2357:8: error: use of undeclared identifier 'eyevalue_to_string_result'; did you mean 'eyevalue_to_string'?
return eyevalue_to_string_result; 
       ^~~~~~~~~~~~~~~~~~~~~~~~~
       eyevalue_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/eyevalue_to_string/src/engine/optics.c:2336:8: note: 'eyevalue_to_string' declared here
char * eyevalue_to_string( struct eyevalue *e) 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/eyevalue_to_string/src/obj/1/optics.o] Error 1
